istiofiles/virtual-service-recommendation-v2_retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v2
    retries:
      attempts: 3
      perTryTimeout: 2s
    fault:
      abort:
        httpStatus: 503
        percent: 50
---
